--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+@font-face {
+    font-family: "Beleren-Bold";
+    src: url('fonts/Beleren2016SmallCaps-Bold.ttf');
+    src: url('fonts/Beleren2016SmallCaps-Bold.woff') format('woff');
+}
+
+@font-face {
+    font-family: "Imprima";
+    src: url('fonts/Imprima-Regular.ttf');
+}
+
 :root {
     --primary-color: #3A3335;
     --secondary-color: #F7EFE0;
@@ -12,6 +23,7 @@
 
 body {
     background-color: var(--secondary-color);
+    font-family: "Beleren-Bold", sans-serif;
 }
 
 header {
