--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ header {
     background-color: var(--primary-color);
     width: 100%;
     min-height: 70px;
+    padding: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -41,8 +42,12 @@ header>img {
     width: clamp(60px, 30vw, 200px);
 }
 
-header input {
+label>input {
     display: none;
+}
+
+label>img{
+    width: clamp(30px, 4vw, 80px);
 }
 
 a {
@@ -76,6 +81,7 @@ button>p {
 
 button>img {
     max-width: clamp(45px, 6vw, 150px);
+    max-height: 100%;
 }
 
 @media screen and (min-width: 768px) {
