--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
 body {
     background-color: var(--secondary-color);
     font-family: var(--text-font), sans-serif;
+    font-size: 1rem;
 }
 
 header {
@@ -38,25 +39,55 @@ header {
     align-items: center;
 }
 
-header>img {
-    width: clamp(60px, 30vw, 200px);
+.logoWCS {
+    width: clamp(60px, 30%, 200px);
+}
+
+.logoTeam {
+    width: clamp(30px, 10%, 120px);
+}
+
+main {
+    padding: 1rem;
+    background-color: var(--secondary-color);
+    gap: 1rem;
+    background-image: url(images/logopythonbackground.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    background-origin: content-box;
+    min-height: 100vh;
+}
+
+label {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 75%;
+    height: clamp(40px, 5vh, 60px);
+    border: var(--primary-color) solid 1px;
+    border-radius: 15px;
+    margin: Auto;
+    overflow: hidden;
+}
+
+label>img {
+    height: 100%;
+    background-color: var(--primary-color);
+    padding: 0.5rem;
+    border-radius: 0 15px 15px 0;
 }
 
 label>input {
-    display: none;
-}
-
-label>img{
-    width: clamp(30px, 4vw, 80px);
+    width: 100%;
+    height: 100%;
+    border-radius: 15px 0 0 15px;
+    background-color: var(--secondary-color);
 }
 
 a {
     text-decoration: none;
-}
-
-main {
-    margin: 0 1rem;
-    background-color: var(--secondary-color);
+    color: var(--text-color);
 }
 
 ul {
@@ -64,6 +95,7 @@ ul {
     justify-content: space-evenly;
     padding: 1rem 0;
     list-style: none;
+    gap: .25rem;
 }
 
 button {
@@ -72,7 +104,7 @@ button {
     border-radius: 15px;
     padding: 0.25rem;
     width: clamp(80px, 25vw, 300px);
-    height: clamp(45px, 8vh, 60px);
+    height: clamp(40px, 5vh, 60px);
 }
 
 button>p {
@@ -84,11 +116,22 @@ button>img {
     max-height: 100%;
 }
 
+section {
+    width: 100%;
+}
+
+.arrowUp {
+    max-width: 60px;
+}
+
 @media screen and (min-width: 768px) {
 
     main {
         margin: 0 2rem;
-        /*background-img: insérer le logo en fond*/
+    }
+
+    label {
+        width: 65%;
     }
 
     button>img {
@@ -97,12 +140,9 @@ button>img {
 
     button>p {
         display: inline-block;
-        color: var(--secondary-color);
-        border-radius: 15px;
-        width: 300px;
-        /*à modifier + voir si on garde une taille fixe*/
-        height: 45px;
-        /*à modifier + voir si on garde une taille fixe*/
+        color: var(--text-color);
+        text-align: center;
+        font-size: clamp(1.2rem, 2vw, 2rem);
     }
 
 }
