--- a/cssforjs.css
+++ b/cssforjs.css
@@ -1,10 +1,34 @@
+#section-cards {
+    text-align: center; /* ne fonctionne pas - voir avec le CSS commun pour savoir ce qui bloque*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+}
+
 .data-cards {
-    width: 30%;
-    height: 200px;
+    height: 550px;
+    width: 400px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+}
+
+.data-cards-img-div {
+    padding-top: 4.2rem;
+    padding-left: 2.2rem;
+    width : 89.5%;
 }
 
 .data-cards-img {
-    width : 10%;
+    width : 100%;
+    height: 14.8rem;
+    object-fit: cover;
+}
+
+.data-cards-text {
+    color: 3A3335; /*à appeler "primary color" si on fusionne avec autre fichier css*/
 }
 
 /* EN COURS NE PAS TOUCHER A CE CODE SVP MERCI */ 
