--- a/style.css
+++ b/style.css
@@ -33,70 +33,39 @@ header {
     background-color: var(--primary-color);
     width: 100%;
     min-height: 70px;
-    padding: .5rem 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-nav {
-    height: 100%;
-    width: 100%;
+    padding: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.btnRetour {
-    background-color: var(--secondary-color);
-    border-radius: 15px;
-    width: clamp(30px, 10%, 120px);
+#header {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: .5rem;
-    max-height: 45px;
+    justify-content: space-between;
 }
 
-a>img {
-    width: clamp(30px, 10%, 120px);
-}
-
-.retour {
-    display: none;
-    font-size: clamp(1rem, 2vw, 1.7rem);
+header>img {
+    width: clamp(60px, 50vw, 200px);
 }
 
 .logoWCS {
-    width: clamp(60px, 50%, 300px);
-    padding-bottom: 8px;
+    width: clamp(60px, 30%, 200px);
 }
 
 .logoTeam {
-    width: clamp(30px, 10%, 60px);
+    width: clamp(30px, 10%, 120px);
 }
 
 main {
     padding: 1rem;
+    background-color: var(--secondary-color);
     gap: 1rem;
-}
-
-.backgroundImg {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: -1;
-    padding-top: 180px;
-    width: clamp(100vw, 100vw, 100vw);
-    height: clamp(100vh, 100vh, 100vh);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.backgroundImg>img {
-    width: 80%;
-    height: 80%;
+    background-image: url(images/logopythonbackground.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    background-origin: content-box;
+    min-height: 100vh;
 }
 
 label {
@@ -123,15 +92,14 @@ label>input {
     height: 100%;
     border-radius: 15px 0 0 15px;
     background-color: var(--secondary-color);
-    padding: 0.25rem;
+}
+
+label>input {
+    display: none;
 }
 
 label>img {
     width: clamp(30px, 4vw, 80px);
-}
-
-.logoP {
-    width: 11%;
 }
 
 a {
@@ -141,6 +109,7 @@ a {
 
 p {
     font-family: var(--text-font);
+    margin-top: 10vw;
     text-align: center;
     line-height: 20px;
 }
@@ -161,26 +130,14 @@ main>h2 {
     margin-bottom: 10vw;
 }
 
-.carousel {
-    width: 5rem;
-    filter: drop-shadow(0 0.25rem 0.25rem black);
+section {
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.slide {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .booster {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 5rem;
+    filter: drop-shadow(0 0.25rem 0.25rem black);
 }
 
 a>h2 {
@@ -197,6 +154,7 @@ button {
     border-radius: 15px;
     padding: 0.25rem;
     width: clamp(80px, 25vw, 300px);
+    height: clamp(40px, 5vh, 60px);
 }
 
 button>p {
@@ -208,23 +166,15 @@ button>img {
     max-height: 100%;
 }
 
+section {
+    width: 100%;
+}
+
 .arrowUp {
     max-width: 60px;
 }
 
 @media screen and (min-width: 768px) {
-
-    .btnRetour {
-        background-color: var(--primary-color);
-    }
-
-    .retour {
-        display: inline-block;
-    }
-
-    a>img {
-        display: none;
-    }
 
     main {
         margin: 0 2rem;
@@ -234,23 +184,15 @@ button>img {
         width: 65%;
     }
 
-    button {
-        padding: .5rem;
-    }
-
     button>img {
         display: none;
     }
 
     button>p {
-        display: block;
+        display: inline-block;
         color: var(--text-color);
         text-align: center;
         font-size: clamp(1.2rem, 2vw, 2rem);
-    }
-    
-    .arrowUp{
-        min-width: 60px;
     }
 
 }
