--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ section {
     justify-content: space-between;
 }
 
-.booster {
+.booster>img {
     width: 5rem;
     filter: drop-shadow(0 0.25rem 0.25rem black);
 }
