--- a/style.css
+++ b/style.css
@@ -68,6 +68,23 @@ main {
     min-height: 100vh;
 }
 
+.booster>img {
+    width: 5rem;
+    filter: drop-shadow(0 0.25rem 0.25rem black);
+}
+
+.booster>img:hover {
+    width: 10rem;
+
+}
+
+.sliderContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
 label {
     display: flex;
     align-items: center;
@@ -92,10 +109,6 @@ label>input {
     height: 100%;
     border-radius: 15px 0 0 15px;
     background-color: var(--secondary-color);
-}
-
-label>input {
-    display: none;
 }
 
 label>img {
@@ -128,16 +141,6 @@ main>h2 {
     justify-content: center;
     margin-top: 10vw;
     margin-bottom: 10vw;
-}
-
-section {
-    display: flex;
-    justify-content: space-between;
-}
-
-.booster {
-    width: 5rem;
-    filter: drop-shadow(0 0.25rem 0.25rem black);
 }
 
 a>h2 {
