--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ nav {
 
 a>img {
     width: clamp(30px, 10%, 120px);
+    max-height: 20px;
 }
 
 .retour {
@@ -154,24 +155,38 @@ ul {
 
 main>h2 {
     font-family: var(--heading-font);
-    margin-left: 3rem;
-    margin-top: 10vw;
-    margin-bottom: 10vw;
+    margin: 1rem;
+    text-align: center;
 }
 
-section {
+.sliderContainer {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.boosterData .boosterJs .boosterStaff {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .booster {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.booster>img {
     width: 5rem;
     filter: drop-shadow(0 0.25rem 0.25rem black);
 }
 
 a>h2 {
-    font-size: 4vw;
+    font-size: clamp(1.2rem, 3vw, 3.5rem);
     text-align: center;
+    color: var(--primary-color);
 }
 
 button {
