--- a/cssforjs.css
+++ b/cssforjs.css
@@ -2,30 +2,109 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2rem;
+    gap: 1rem;
 }
 
-.data-cards {
-    height: 550px;
-    width: 400px;
+.card {
+    width: 250px;
+    height: 350px;
     background-size: contain;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
-.data-cards-img-div {
-    padding-top: 4.2rem;
-    padding-left: 2.2rem;
-    width : 89.5%;
+.card-header {
+    width: 12rem;
+    display: flex;
+    justify-content: space-between;
 }
 
-.data-cards-img {
+.card-logo {
+    width: .8rem;
+    margin-top: 1.2rem;
+}
+
+.card-name {
+    margin-top: 1.2rem; 
+    margin-left: .2rem;
+    color: #3A3335; /*à appeler "primary color" si on fusionne avec autre fichier css*/
+    font-size: 12px;
+    font-weight: bold;
+    text-align: justify;
+}
+
+.card-img-div {
+    width : 82.5%;
+    padding-top: .2rem;
+}
+
+.card-img {
     width : 100%;
-    height: 14.8rem;
+    height: 9.5rem;
     object-fit: cover;
 }
 
-.data-cards-text {
-    color: 3A3335; /*à appeler "primary color" si on fusionne avec autre fichier css*/
+
+@media screen and (min-width: 768px) {
+
+    /* VERSION DISPLAY FLEX, seul bémol : la dernière ligne serait peut-être mieux non centrée
+    mais difficile de viser la dernière ligne */
+    #section-cards {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        gap: 2rem;
+        flex-wrap: wrap;
+    }  
+
+    /* VERSION GRID, mais implique de faire plusieurs media screen pour réduire la taille de la grille
+    en fonction de la réduction de taille de l'écran :
+    
+    #section-cards {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        justify-items: center;
+    }   */
+
+    .card {
+        height: 350px;
+        width: 200px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .card-header {
+        width: 10rem;
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .card-logo {
+        width: .6rem;
+        margin-top: .8rem;
+    }
+    
+    .card-name {
+        margin-top: .8rem; 
+        margin-left: .2rem;
+        color: #3A3335; /*à appeler "primary color" si on fusionne avec autre fichier css*/
+        font-size: 12px;
+        font-weight: bold;
+        text-align: justify;
+    }
+    
+    .card-img-div {
+        width : 82%;
+        margin-top: -.16rem;
+    }
+    
+    .card-img {
+        width : 100%;
+        height: 7.6rem;
+        object-fit: cover;
+    }
 }
