--- a/cssforjs.css
+++ b/cssforjs.css
@@ -65,7 +65,7 @@
     
     #section-cards {
         display: grid;
-        grid-template-columns: repeat(5, 1fr);
+        grid-template-columns: repeat(3, 1fr);
         justify-items: center;
     }   
 
@@ -108,4 +108,21 @@
         height: 7.6rem;
         object-fit: cover;
     }
+}
+
+@media screen and (min-width: 930px) {
+    
+    #section-cards {
+        grid-template-columns: repeat(4, 1fr);
+    }   
+
+}
+
+
+@media screen and (min-width: 1150px) {
+    
+    #section-cards {
+        grid-template-columns: repeat(5, 1fr);
+    }   
+
 }
