--- a/zoom.css
+++ b/zoom.css
@@ -59,7 +59,7 @@
     padding-top: .2rem;
 }
 
-.zoomedCardPicture {
+.zoomedCardImg{
     max-width: 100%;
     height: 9.5rem;
     object-fit: cover;
