--- a/cssforjs.css
+++ b/cssforjs.css
@@ -3,9 +3,9 @@
     flex-direction: column;
     align-items: center;
     gap: 1rem;
-    padding-top: 3rem;
+    padding-top: 5rem;
     background-repeat: no-repeat;
-    background-position: center 50%;
+    background-position: center;
     background-size: 50%;
     background-attachment: fixed;
 }
@@ -35,19 +35,20 @@
 .card-name {
     margin-top: 1.2rem;
     margin-left: .2rem;
-    color: #3A3335; /*à appeler "primary color" si on fusionne avec autre fichier css*/
+    color: #3A3335;
+    /*à appeler "primary color" si on fusionne avec autre fichier css*/
     font-size: 12px;
     font-weight: bold;
     text-align: justify;
 }
 
 .card-img-div {
-    width : 82.5%;
+    width: 82.5%;
     padding-top: .2rem;
 }
 
 .card-img {
-    width : 100%;
+    width: 100%;
     height: 9.5rem;
     object-fit: cover;
 }
@@ -63,12 +64,13 @@
         justify-content: center;
         gap: 2rem;
         flex-wrap: wrap;
-    }   
-} 
+    }
+}
+
 /* 
      VERSION GRID, mais implique de faire plusieurs media screen pour réduire la taille de la grille
-    en fonction de la réduction de taille de l'écran : */ 
-    
+    en fonction de la réduction de taille de l'écran : */
+
 /* #section-cards {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -103,3 +105,10 @@
     }   
 
 }  */
+
+@media screen and (min-width: 1024px) {
+    #section-cards {
+        background-size: 30%;
+    }
+
+}
