--- a/cssforjs.css
+++ b/cssforjs.css
@@ -53,10 +53,36 @@
     object-fit: cover;
 }
 
+.logo-button, .logo-button-sparkle {
+    display: none;
+}
+
+ 
+
 @media screen and (min-width: 768px) {
 
     /*  VERSION DISPLAY FLEX, seul bémol : la dernière ligne serait peut-être mieux non centrée
     mais difficile de viser la dernière ligne */
+
+    #buttonData {
+        display: flex;
+        justify-content: center;
+    }
+
+    .logo-button {
+        display: block;
+        width: 1.2rem;
+        padding-top: .2rem;
+        margin-right: .7rem;
+    }
+    
+    .logo-button-sparkle {
+        display: block;
+        width: 1.2rem;
+        padding-top: .2rem;
+        margin-left: .5rem;
+    }
+
     #section-cards {
         display: flex;
         flex-direction: row;
