--- a/zoom.css
+++ b/zoom.css
@@ -108,9 +108,10 @@
 .closeButton {
     width: clamp(25px, 1.5vw, 50px);
     height: clamp(25px, 1.5vw, 50px);
-    position: absolute;
+    position: absolute; 
     top: 1rem;
     right: 1.5rem;
+    cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
@@ -126,14 +127,14 @@
     }
 
     .zoomedCard {
-        width: 340px;
-        height: 480px;
+        width: 289px;
+        height: 408px;
         padding: 1.5rem;
     }
 
     .zoomedCardHeader {
         width: 100%;
-        height: 32px;
+        height: 26px;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -147,7 +148,7 @@
     .zoomedCardImgContainer {
         width: 100%;
         height: 48%;
-        padding: 0 8px;
+        padding: 0 4px;
     }
 
     .zoomedCardInfo {
@@ -168,15 +169,30 @@
     .zoomedCardAttack {
         font-size: 1.2rem;
     }
+
+    .closeButton {
+        top: 2rem;
+        right: 2rem;
+    }
 }
 
-.closeButton {
-    top: 2rem;
-    right: 2rem;
-}
 
 @media screen and (min-width: 1200px) {
     .zoomBlurBackground {
         padding: 8% 10%;
+    }
+
+    .zoomedCard {
+        width: 340px;
+        height: 480px;
+    }
+
+    .zoomedCardHeader {
+        height: 32px;
+        display: flex;
+    }
+
+    .zoomedCardImgContainer {
+        padding: 0 8px;
     }
 }
