--- a/style.css
+++ b/style.css
@@ -43,15 +43,15 @@ header {
 nav {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
-.backButtonMobile {
+#backButtonMobile {
     background-color: var(--secondary-color);
     border-radius: 15px;
     width: clamp(30px, 10%, 120px);
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     padding: .5rem;
@@ -59,20 +59,17 @@ nav {
     transition: opacity .3s;
 }
 
-.backButtonDesktop {
+#backButtonDesktop {
     transition: all .3s;
+    display: none;
 }
 
-.backButtonDesktop:hover {
+#backButtonDesktop:hover {
     opacity: 0.6;
 }
 
 .arrow_back {
     width: clamp(30px, 10%, 120px);
-}
-
-.backButtonDesktop {
-    display: none;
 }
 
 .logoWCS {
@@ -86,6 +83,7 @@ nav {
 .logoTeam {
     width: clamp(30px, 10%, 120px);
     max-height: 60px;
+    display: none;
 }
 
 main {
@@ -100,6 +98,10 @@ main {
     width: 12rem;
     filter: drop-shadow(0 0.25rem 0.25rem black);
     transition-duration: 300ms;
+}
+
+#homePage {
+    display: block;
 }
 
 /* carousel */
@@ -139,8 +141,9 @@ label {
     overflow: hidden;
 }
 
-.searchBar {
-    display: flex;
+#searchBar {
+    display: none;
+    /* display flex */
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -179,6 +182,10 @@ p {
     text-align: center;
 }
 
+.pmain {
+    margin-top: 2rem;
+}
+
 ul {
     display: flex;
     flex-wrap: wrap;
@@ -201,7 +208,7 @@ li>button:hover {
     border-radius: 40px;
 }
 
-main>h2 {
+.titleMain {
     font-family: var(--heading-font);
     margin: 2rem;
     text-align: center;
@@ -254,7 +261,8 @@ button>img {
 
 /* CARTES ET BOUTONS : */
 
-.logo-button, .logo-button-sparkle {
+.logo-button,
+.logo-button-sparkle {
     display: none;
 }
 
@@ -298,7 +306,7 @@ button>img {
 .card-name {
     margin-top: 1.4rem;
     margin-left: .2rem;
-    color: var(--primary-color); 
+    color: var(--primary-color);
     font-size: 12px;
     font-weight: bold;
     text-align: justify;
@@ -432,7 +440,7 @@ button>img {
 .closeButton {
     width: clamp(25px, 1.5vw, 50px);
     height: clamp(25px, 1.5vw, 50px);
-    position: absolute; 
+    position: absolute;
     top: 1rem;
     right: 1.5rem;
     cursor: pointer;
@@ -449,12 +457,12 @@ button>img {
         padding-right: 3rem;
     }
 
-    .backButtonMobile {
+    #backButtonMobile {
         display: none;
     }
 
-    .backButtonDesktop {
-        display: flex;
+    #backButtonDesktop {
+        display: none;
         font-size: clamp(1rem, 2vw, 1.7rem);
     }
 
@@ -497,21 +505,30 @@ button>img {
         min-width: 60px;
     }
 
-/* CARTES ET BOUTONS */
+    /* CARTES ET BOUTONS */
 
-    #buttonData, #buttonJS, #buttonStaff, #buttonAll {
+    #buttonData,
+    #buttonJS,
+    #buttonStaff,
+    #buttonAll {
         display: flex;
         justify-content: center;
     }
 
-    .logo-button, .logo-button-js, .logo-button-staff, .logo-button-all{
+    .logo-button,
+    .logo-button-js,
+    .logo-button-staff,
+    .logo-button-all {
         display: block;
         width: 1.2rem;
         padding-top: .2rem;
         margin-right: .7rem;
     }
-    
-    .logo-button-sparkle, .logo-button-sparkle-js, .logo-button-sparkle-staff, .logo-button-sparkle-all {
+
+    .logo-button-sparkle,
+    .logo-button-sparkle-js,
+    .logo-button-sparkle-staff,
+    .logo-button-sparkle-all {
         display: block;
         width: 1.2rem;
         padding-top: .2rem;
